# backend

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  database.py  deploy.sh  docker-compose.prod.yml  docker-compose.yml  main.py  nginx.conf  nginx.prod.conf  pyproject.toml  schemas.py
alembic/: env.py
app/: main.py
app/core/: config.py  models.py
app/domains/artist/: models.py  router.py  schemas.py  service.py
app/domains/artwork/: router.py  schemas.py  service.py
app/domains/auth/: models.py  router.py  schemas.py  service.py
app/domains/gallery/: __init__.py  models.py  router.py  schemas.py  service.py
app/domains/nfts/: models.py  nft_buy.py  router.py  schemas.py  services.py
app/domains/users/: models.py  router.py  schemas.py  service.py
app/shared/: pinata_client.py  xrpl.py
app/shared/database/: connection.py
app/shared/utils/: response.py
